# ct

lab_1_to_git/: CMakeLists.txt  poor_attempts_to_task2.cpp  task2_correct.cpp  tor.cpp
lab_2_to_git/: sran.mp4:Zone.Identifier
lab_2_to_git/cpp/: CMakeLists.txt  Steve.stl:Zone.Identifier  Steve_fixed.stl  Steve_fixed.stl:Zone.Identifier  tetr3d.cpp
